@@ -13,8 +13,7 @@ ENV JAVA_OPTS="${JAVA_OPTS} --add-opens java.base/jdk.internal.misc=ALL-UNNAMED"
 ENV JAVA_OPTS="${JAVA_OPTS} --add-opens java.base/java.nio=ALL-UNNAMED"
 ENV JAVA_OPTS="${JAVA_OPTS} -Dio.netty.tryReflectionSetAccessible=true"
 ENV JAVA_OPTS="${JAVA_OPTS} -XX:MaxRAMPercentage=65.0"
-ENV JAVA_OPTS="${JAVA_OPTS} --illegal-access=warn"
 
 COPY  build/install/app/lib/  ./lib
-COPY build/libs/mininnboks*.jar ./app.jar
+COPY build/libs/app*.jar ./app.jar
 
